--- a/Schadensmeldung/Schadensmeldung.csproj
+++ b/Schadensmeldung/Schadensmeldung.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Damage.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
