--- a/Ticketautomat/Ticketautomat.csproj
+++ b/Ticketautomat/Ticketautomat.csproj
@@ -8,8 +8,9 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Ticketautomat</RootNamespace>
     <AssemblyName>Ticketautomat</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
