--- a/Schliessanlage/packages.config
+++ b/Schliessanlage/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ArduinoDriver" version="2.0.0" targetFramework="net40" />
-  <package id="ArduinoUploader" version="2.1.0" targetFramework="net40" />
-  <package id="IntelHexFormatReader" version="2.1.0" targetFramework="net40" />
-  <package id="NLog" version="4.0.0" targetFramework="net40" />
+  <package id="ArduinoDriver" version="2.2.0" targetFramework="net452" />
+  <package id="ArduinoUploader" version="2.3.0" targetFramework="net452" />
+  <package id="IntelHexFormatReader" version="2.2.1" targetFramework="net452" />
+  <package id="NLog" version="4.3.0" targetFramework="net45" />
+  <package id="SerialPortStream" version="2.0.3" targetFramework="net452" />
 </packages>
